# tap-getabstract

./: MANIFEST.in  README.md  config.json  meltano.yml  pyproject.toml  setup.py  tap-getabstract.sh
OLD/: tap-testing.py  tox.ini
tap-getabstract/: streams.py  tap.py
tap_getabstract/: streams.py  tap.py
