[tool.poetry]
name = "tap-getabstract"
version = "0.0.1"
description = "`tap-getabstract` is Singer-compliant getabstract tap built with Singer SDK."
authors = []
license = "Apache v2"

[tool.poetry.dependencies]
python = "<3.11,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "0.3.17"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
viztracer = "^0.15.4"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_getabstract"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-getabstract = 'tap_getabstract.tap:cli'
