[tool.poetry]
name = "tap-getabstract"
version = "0.1.0"
description = ""
authors = ["Giovanni Bortolussi <gbortolussi@degreed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.11,>=3.6.2"
singer-sdk = "0.3.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-getabstract = 'tap_getabstract.tap:cli'
